RDK-52316 : Content Protection service
Reason for change: new service to proxy content security
capabilities of the existing DRM plugins like SecManager & Watermark
and provide a single unified interface.
Test Procedure: None
Risks: None
Signed-off-by: Nikita Poltorapavlo <npoltorapavlo@productengine.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -413,6 +413,10 @@ if(PLUGIN_RIALTOSERVERMANAGER)
     add_subdirectory(RialtoServerManager)
 endif()
 
+if(PLUGIN_CONTENTPROTECTION)
+    add_subdirectory(ContentProtection)
+endif()
+
 if(WPEFRAMEWORK_CREATE_IPKG_TARGETS)
     set(CPACK_GENERATOR "DEB")
     set(CPACK_DEB_COMPONENT_INSTALL ON)
